<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * Created by Mayank Sindwani on 2017-05-08.
 *
 * This file is part of Handbook which is licensed under the
 * Apache License, Version 2.0. Full license details are
 * available at http://www.apache.org/licenses/LICENSE-2.0.
 */
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Handbook</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">OK</string>
    <string name="add_step">Add Step</string>
    <string name="save">Save</string>
    <string name="tutorial_name">Tutorial Name</string>
    <string name="description">Description</string>
    <string name="more">More</string>
    <string name="share">Share</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="last_modified">Last Modified:</string>
    <string name="no_tutorials">There are no tutorials to display.</string>
    <string name="name">Name</string>
    <string name="amount">Amount (Optional)</string>
    <string name="unit">Unit (Optional)</string>
    <string name="unit_example">e.g lbs</string>
    <string name="title">Title</string>
    <string name="move_up">Move Up</string>
    <string name="move_down">Move Down</string>
    <string name="requirements">Requirements</string>
    <string name="requirements_tts">Requirements:</string>
    <string name="add_requirement">Add Requirement</string>
    <string name="instructions">Instructions</string>
    <string name="instructions_tts">Instructions:</string>
    <string name="optional">Mark as Optional</string>
    <string name="none">None</string>
    <string name="toggle">Toggle</string>
    <string name="all">All</string>
    <string name="recent">Recent</string>
    <string name="frequent">Frequent</string>
    <string name="required">Required</string>
    <string name="summary">Summary</string>
    <string name="saving_tutorial">Saving Tutorial</string>
    <string name="loading">Loading</string>
    <string name="failed_tutorial_save">"Error: Failed to Save a Tutorial"</string>
    <string name="unknown_error">An Unknown Error Occurred</string>
    <string name="add_image">Add Image</string>
    <string name="upload">Upload</string>
    <string name="nth_step">
        <xliff:g id="index">%d</xliff:g>/<xliff:g id="num_steps">%d</xliff:g>
    </string>
    <string name="nth_step_no_title">
        Step <xliff:g id="index">%d</xliff:g>
    </string>
    <string name="nth_step_title">
        Step <xliff:g id="index">%d</xliff:g> : <xliff:g id="title">%s</xliff:g>
    </string>
    <string name="play">Play</string>
</resources>
